styles.css
/* Styles for HTML file */
@font-face {
    /* Reference the font from its directory. */
    font-family: 'OperationGuideFont';
    src: url('./font/Rodin-Font.otf') format('opentype'); 
    font-weight: normal;
    font-style: normal;
}
html{
    /* Set HTML background color to black */
    background-color:white
}
h1{
    /* Properties for the header element */
    color:black;
    font-family: 'OperationGuideFont', sans-serif;
    font-weight: normal;
    font-size: 17px;
    text-align: left;
    top: 0px;
    left: 0px;
    margin-top: -10px;
    margin-bottom: -3px;
}

p, label {
    /* Properties for the paragraph and label elements */
    color:black;
    font-family: 'OperationGuideFont', sans-serif;
    font-weight: normal;
    text-align: left;
}

.Image-Column{
    /* Properties of the column for images */
    width: 35px;
    height: 30px;
    background-color: blue;
}

.Image-Cell{
    /* Properties for any image in their column */
    max-width: 26px;
    height: auto;
    display: block;
    margin: auto;
}

.Input-Column{
    /* Properties of the column for input */
    width: 235px;
    height: 30px;
    padding-left: 10px;
}

.Text-Column{
    /* Properties of the column for text */
    width: 235px;
    height: 30px;
    padding-left: 10px;
}

.Text-Column-Font{
    /* Properties of any text in their columns */
    font-family: 'OperationGuideFont', sans-serif;
    font-weight: normal;
    text-align: left;
}

.Text-Row-Color{
    /* Background color for the first row of the table. */
    background-color: red;
}


table, th, td {
    /* Properties for the created table */
    border: 1px solid black;
    border-collapse: collapse;
    table-layout: fixed;
}

.screenshot-box {
    /* Properties for a box of which users have the limit screenshot area. */
    position: absolute;
    top: 0px;
    left: 0px;
    width: 556px;
    height: 259px;
    border-right: 1px dashed red;
    border-bottom: 1px dashed red;
    border-top: none;
    border-left: none;
    background: transparent;
    box-sizing: border-box;
    pointer-events: none;
}

#add-row-btn {
    /* Properties for the add button style */
    position: absolute;
    top: 270px;
    left: 10px;
    padding: 8px 16px;
    margin-top: 0;
    margin-bottom: 10px;
    border-radius: 20px;
}
#remove-row-btn {
    /* Properties for the remove button style */
    position: absolute;
    top: 270px;
    left: 110px;
    padding: 8px 16px;
    margin-top: 0;
    margin-bottom: 10px;
    border-radius: 20px;
}

.palette {
    /* Properties for the image palette */
    position: absolute;
    top: 325px;
    left: 10px;
    width: 330px;
    height: 150px;
    background:grey;
    border: 3px solid black;
}

.palette-text {
    /* Properties for the text in the palette */
    color: white;
    font-family: 'OperationGuideFont', sans-serif;
    font-weight: normal;
    text-align: left;
    padding-left: 5px;
}

.palette-image {
    /* Properties for the images in the palette */
    width: 26px;
    height: auto;
    margin: 5px;
    cursor: grab;
}

.control-style-selector {
    /* Properties for the control style dropdown menu */
    position: absolute;
    top: 500px;
    left: 10px;
}

